# jni-demo

./: .gitignore  License.txt  README.md  pom.xml
jni-bindings/: pom.xml
jni-bindings/src/main/java/net/devops/demo/jni/bindings/: HelloWorldJni.java  MassiveComputation.java  NativeLibUtils.java  SinusGenerator.java
jni-client/: pom.xml
jni-client/src/main/java/ch/qos/logback/core/rolling/: StartupSizeBasedTriggeringPolicy.java
jni-client/src/main/java/net/devops/demo/jni/client/: JniMain.java  MassiveComputationDemo.java  SinusGeneratorDemo.java
jni-client/src/main/resources/: logback.xml
jni-implementation/: pom.xml
jni-implementation/src/main/native/: CMakeLists.txt  net_devops_demo_jni_bindings_HelloWorldJni.cpp  net_devops_demo_jni_bindings_HelloWorldJni.h  net_devops_demo_jni_bindings_MassiveComputation.cpp  net_devops_demo_jni_bindings_MassiveComputation.h  net_devops_demo_jni_bindings_SinusGenerator.cpp  net_devops_demo_jni_bindings_SinusGenerator.h
